# Zephyr_nucleo_F767ZI

./: LICENSE  README.md
docker/: README.md  dockerfile
src/: CMakeLists.txt  main.cpp  prj.conf
